# llm-defender-subnet

./: .api-env  .api-env.sample  .config.js  .env.sample  .gitignore  .validator-env.sample  API.Dockerfile  Dockerfile  Dockerfile_API  MANIFEST.in  README.md  SECURITY.md  docker-compose-local-dev.yml  docker-compose.yml  launch.md  min_compute.yml  miner-0.config.js  miner-1.config.js  miner.config.js  pyproject.toml  setup.cfg  setup.py  test.py  test2.py  updater.config.js  validator.Dockerfile  validator.config.js
.github/workflows/: subnet-api-container-latest.yml  subnet-api-container-tagged.yml  subnet-containers-latest.yml  subnet-containers-tagged.yml
docs/: developer-guide.md  fine-tuning-guide.md
llm_defender/: __init__.py  defaults.yml
llm_defender/base/: __init__.py  config.py  engine.py  healthcheck.py  mock_data.py  neuron.py  prompt_generator.py  protocol.py  utils.py  wandb_handler.py
llm_defender/base/generator_data/: topics.py
llm_defender/core/: __init__.py  miner.py  validator.py
llm_defender/core/exceptions/: __init__.py
llm_defender/core/miner/: __init__.py  miner.py
llm_defender/core/miner/moderation/: __init__.py  analyzer.py  moderation_classification.py
llm_defender/core/miner/prompt_injection/: analyzer.py  text_classification.py
llm_defender/core/miner/sensitive_information/: analyzer.py  token_classification.py
llm_defender/core/miners/: miner.py
llm_defender/core/miners/analyzers/: __init__.py
llm_defender/core/prompt_injection/: analyzer.py  process.py  text_classification.py
llm_defender/core/prompt_injection/reward/: penalty.py  scoring.py
llm_defender/core/sensitive_information/: analyzer.py  process.py  token_classification.py
llm_defender/core/sensitive_information/reward/: penalty.py  scoring.py
llm_defender/core/validator/: __init__.py  prompt_generator.py  validator.py
llm_defender/core/validator/data_types/: __init__.py
llm_defender/core/validator/generator_data/: __init__.py  bad_secrets.py  good_secrets.py  roles.py
llm_defender/core/validator/prompt_injection/: process.py
llm_defender/core/validator/sensitive_information/: process.py
llm_defender/core/validators/: validator.py
llm_defender/core/validators/analyzers/: __init__.py
llm_defender/core/validators/penalty/: __init__.py  base.py  duplicate.py  response.py  similarity.py
llm_defender/core/validators/prompting/: __init__.py
llm_defender/neurons/: miner.py  validator.py
llm_defender/subnet_api/: handler.py  main.py
prompt_defender/base/: common.py  neuron.py
prompt_defender/prompt_injection/: neurons.py  protocol.py
prompt_defender/prompt_injection/miner/: engines.py  miner.py
prompt_defender/prompt_injection/validator/: validator.py
scripts/: api_example.py  auto_updater.py  prep.py  run.sh  run_auto_updater.sh  run_neuron.sh  updater.sh
scripts/fine_tuning_helpers/: text_classification_helper.py  text_classification_prompt_injection_helper.py  text_classification_sensitive_information_helper.py  token_classification_sensitive_information_helper.py  yara_helper.py
scripts/helpers/: generate_prompts.py  pickle_debugger.py  query_miner.py  query_notebook.ipynb
tests/: test_mock_data.py  test_utils.py  test_validator.py  validator.py
tests/base/: test_engine.py  test_neuron.py  test_protocol.py  test_utils.py  test_wandadb_handler.py
tests/core/: test_miner.py  test_utils.py
tests/core/miners/: neuron.py  test_miner.py  test_supported_analyzers.py
tests/core/validators/: test_validator.py
tests/miner/: neuron.py  test_text_classification.py
tests/validator/: base_penalty.py  duplicate_penalty.py  similarity_penalty.py  test_api_call.py  test_base_penalty.py  test_duplicate_penalty.py  test_prompt_api.py  test_scoring.py
(+55 files in other folders)
