[metadata]
name = llm_defender
version = 0.1.5
author = ceterum1
author_email = ceterum1@proton.me
description = This project implements the llm-defender subnet for Bittensor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ceterum1/llm-defender-subnet
classifiers = 
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires =
    bittensor
    torch
    transformers
    scikit-learn
    datasets
    chromadb
    yara-python
[options.packages.find]
include = llm_defender
