[metadata]
name = llm_defender
version = 0.7.1
author = synapsec.ai
author_email = contact@synapsec.ai
description = This project implements the llm-defender subnet for Bittensor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/synapsec-ai/llm-defender-subnet
classifiers = 
    "Development Status :: 3 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires =
    bittensor == 6.9.3
    torch
    gitpython
    python-dotenv
[options.packages.find]
include = llm_defender

[options.extras_require]
wandb =
    wandb
miner = 
    transformers
    datasets
validator =
    scikit-learn
    numpy